feat: expand document ingestion and agent smoke workflows